# Anodium

./: Cargo.toml  README.md  config.rhai  run.sh  start.sh
.github/workflows/: rust.yml
anodium/: Cargo.toml
anodium-backend/: Cargo.toml  LICENSE  build.rs
anodium-backend/examples/: connectors.rs  raw.rs  run.rs  simple.rs
anodium-backend/src/: lib.rs  libinput.rs
anodium-backend/src/drm/: device.rs  gpu.rs  mod.rs  udev.rs  utils.rs
anodium-backend/src/udev/: device_map.rs  drm_device.rs  drm_scanner.rs  edid.rs  gbm_device.rs  mod.rs
anodium-backend/src/udev/drm_scanner/: connector_scanner.rs  crtc_mapper.rs
anodium-backend/src/utils/: cursor.rs  mod.rs
anodium-backend/src/winit/: mod.rs
anodium-backend/src/x11/: mod.rs
anodium-framework/: Cargo.toml
anodium-framework/src/: draw.rs  input.rs  lib.rs  pointer_icon.rs  process.rs  surface_data.rs
anodium-framework/src/quad/: glow.rs  mod.rs
anodium-framework/src/quad/shaders/: quad.frag  quad.vert
anodium-framework/src/shell/: mod.rs  utils.rs  wlr_layer.rs  xdg.rs  xwayland.rs
anodium-framework/src/shell/surface_lists/: layer_list.rs  not_mapped_list.rs  window_list.rs
anodium-protocol/: Cargo.toml  anodium.xml  build.rs
anodium-protocol/examples/: calloop_client.rs  client.rs  glib_client.rs  server.rs
anodium-protocol/gtk-example/: Cargo.toml
anodium-protocol/gtk-example/src/: main.rs
anodium-protocol/src/: lib.rs
anodium-protocol/src/client/: calloop.rs  glib.rs  mod.rs
anodium-protocol/src/server/: mod.rs  output.rs  workspace.rs
anodium-smallervil/: Cargo.toml
anodium-smallervil/src/: backend_handler.rs  input_handler.rs  main.rs  output_handler.rs  shell_handler.rs
anodium-smallvil/: Cargo.toml
anodium-smallvil/src/: input_handler.rs  main.rs  output_handler.rs  shell_handler.rs
anodium/src/: main.rs  on_commit.rs  positioning.rs
anodium/src/data/: mod.rs  output.rs
anodium/src/grabs/: move_grab.rs  resize_grab.rs
anodium/src/handlers/: backend.rs  compositor.rs  data_device.rs  dmabuf.rs  input.rs  mod.rs  output.rs  xdg.rs
anodium/src/xwayland/: mod.rs  pending_window.rs  xwayland_client.rs
imgui-smithay-renderer/: Cargo.toml  Readme.md
imgui-smithay-renderer/src/: lib.rs
imgui-smithay-renderer/src/shaders/: quad.frag  quad.vert
src/: backend_handler.rs  cli.rs  config.rs  cursor.rs  drawing.rs  event_handler.rs  handlers.rs  input_handler.rs  ipc.rs  iterators.rs  main.rs  on_commit.rs  output_handler.rs  shell_handler.rs  state.rs  utils.rs
src-old/: backend_handler.rs  cli.rs  event_handler.rs  input_handler.rs  main.rs  shell_handler.rs  state.rs
src-old/config/: eventloop.rs  keyboard.rs  log.rs  system.rs
src-old/config/outputs/: mod.rs
src-old/config/outputs/shell/: box.rs  button.rs  fps.rs  mod.rs  text.rs  widget.rs
src-old/config/outputs/shell/logger/: filter.rs
src-old/config/outputs/shell/menu/: label.rs  mod.rs
src-old/config/regions/: mod.rs  workspace.rs
src-old/grabs/: mod.rs  move_surface_grab.rs
src-old/region_manager/: region.rs  workspace.rs
src-old/utils/: iterators.rs
src/animations/: enter_exit.rs  maximize.rs  mod.rs
src/backend/: mod.rs  session.rs  udev.rs  winit.rs
src/backend/udev/: input.rs
src/backend/winit/: input.rs
src/config/: anodize.rs  eventloop.rs  input.rs  keyboard.rs  log.rs  mod.rs  output.rs  outputs.rs  state.rs  system.rs  windows.rs  workspace.rs
src/config/keyboard/: keybind.rs  mod.rs  modifiers_state.rs
src/config/outputs/: layout.rs  mod.rs  output_descriptor.rs
src/config/outputs/shell/: box.rs  button.rs  container.rs  fps.rs  mod.rs  output.rs  panel.rs  pointer.rs  text.rs  widget.rs  workspace.rs
src/config/outputs/shell/logger/: drain.rs  filter.rs  mod.rs  serializer.rs
src/config/outputs/shell/menu/: item.rs
src/config/regions/: mod.rs  workspace.rs
src/data/: seat.rs  surface.rs
src/desktop_layout/: iterators.rs  layer_map.rs  mod.rs  output_map.rs
src/desktop_layout/layer_map/: layer_surface.rs
src/desktop_layout/output_map/: output.rs
src/desktop_layout/popup/: list.rs  mod.rs
src/desktop_layout/window/: list.rs  mod.rs
src/framework/: cursor.rs  mod.rs  surface_data.rs
src/framework/backend/: mod.rs  session.rs  udev.rs  winit.rs  x11.rs
src/framework/shell/: mod.rs  wlr_layer.rs  xdg.rs  xwayland.rs
src/framework/shell/surface_lists/: layer_list.rs  mod.rs  not_mapped_list.rs  window_list.rs
src/framework/shell/xwayland/: x11_state.rs  x11_surface.rs
src/grabs/: mod.rs  move_grab.rs  move_surface_grab.rs  popup_grab.rs  resize_grab.rs  resize_surface_grab.rs
src/handlers/: backend_handler.rs  compositor.rs  data_device_handler.rs  dmabuf.rs  input.rs  input_handler.rs  mod.rs  output.rs  output_handler.rs  seat.rs  shell_handler.rs  xdg.rs  xdg_shell.rs
src/input_handler/: mod.rs  udev.rs  winit.rs
src/maps/: layer_map.rs  mod.rs  not_mapped_list.rs
src/output_manager/: mod.rs  output.rs
src/output_map/: mod.rs  mode.rs  output.rs
src/output_map/layer_map/: layer_surface.rs
src/popup/: list.rs  mod.rs  popup_surface.rs
src/positioner/: floating.rs  mod.rs  tiling.rs  universal.rs
src/region_manager/: mod.rs  region.rs  workspace.rs
src/render/: mod.rs  quad.rs  renderer.rs  wayland.rs
src/shell/: mod.rs  move_surface_grab.rs  not_mapped_list.rs  resize_surface_grab.rs  surface_data.rs  xdg_shell.rs
src/shell/shell_manager/: mod.rs  window_list.rs  wlr_layer.rs  xdg.rs  xwayland.rs
src/shell/shell_manager/surface_lists/: layer_list.rs  not_mapped_list.rs  window_list.rs
src/shell/shell_manager/xwayland/: x11_surface.rs
src/state/: mod.rs  output.rs  seat.rs
src/utils/: imgui_input.rs  iterators.rs  mod.rs
src/wayland/: decoration.rs  mod.rs
src/window/: list.rs  mod.rs  window_surface.rs
src/workspace/: mod.rs
src/workspace_map/: mod.rs
src/xwayland/: mod.rs  x11rb_event_source.rs
