[package]
name = "anodium"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
input = { version = "0.7.0", features = ["udev"], optional = true }
thiserror = "1"
xcursor = { version = "0.3.3", optional = true }
image = { version = "0.23.14", default-features = false, optional = true }
fps_ticker = "1.0.0"
rand = "0.8.4"
slog = { version = "2.1.1" }
slog-term = "2.8"
slog-async = "2.2"
#slog-stdlog = "4.1.0"
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
xkbcommon = "0.4.0"
generational-arena = "0.2.8"
cgmath = "0.18.0"

imgui = "0.8.0"
imgui-smithay-renderer = {path="./imgui-smithay-renderer"}
rhai = "1.2.1"

[dependencies.smithay]
# git = "https://github.com/Smithay/smithay.git"
git = "https://github.com/PolyMeilex/smithay.git"
branch="seat-ddata"
default-features = false
features = [ "use_system_lib", "renderer_gl", "backend_egl", "wayland_frontend", "slog-stdlog" ]

[dependencies.x11rb]
optional = true
version = "0.9.0"
default-features = false
features = [ "composite" ]

[features]
default = ["udev","winit", "xwayland", "x11"]
# default = ["udev","winit", "xwayland"]
#default = ["udev","winit"]
x11 = [ "smithay/backend_x11", "x11rb"]

winit = [ "smithay/backend_winit" ]
udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_session", "smithay/backend_session_logind", "input", "image", "xcursor" ]

xwayland = [ "smithay/xwayland", "smithay/x11rb_event_source", "x11rb" ]
