[package]
name = "anodium"
version = "0.1.0"
edition = "2018"

[workspace]
members=["anodium-backend"]

[dependencies]
anodium-protocol = { path = "./anodium-protocol", features = ["server"] }
anodium-backend = { path = "./anodium-backend" }

bitflags = "1.3"
thiserror = "1"
fps_ticker = "1.0"
rand = "0.8"

slog = { version = "2.1" }
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-stream = "1.2"
slog-json = "2.4"

xkbcommon = "0.4"
generational-arena = "0.2"
cgmath = "0.18"

rhai = "1.3"

futures = "0.3"
shell-words = "1.0"

lazy_static = "1.4"

chrono = "0.4"

egui = "0.16"

gumdrop = "0.8"
strum = { version = "0.23", features = ["derive"] }

indexmap = "1.8.0"

[dependencies.smithay]
# git = "https://github.com/Smithay/smithay.git"
git = "https://github.com/PolyMeilex/smithay.git"
branch = "seat-ddata"
default-features = false
features = [
  "use_system_lib",
  "renderer_gl",
  "backend_egl",
  "wayland_frontend",
  "slog-stdlog",
  "desktop",
]

[dependencies.x11rb]
optional = true
version = "0.9"
default-features = false
features = ["composite"]

[dependencies.calloop]
version = "0.9"
features = ["executor", "futures-io"]

[dependencies.smithay-egui]
git = "https://github.com/Smithay/smithay-egui.git"

[features]
default = ["udev", "winit", "x11", "debug"]

x11 = ["anodium-backend/x11", "x11rb"]
winit = ["anodium-backend/winit"]
udev = ["anodium-backend/udev"]

debug = []
#xwayland = ["smithay/xwayland", "smithay/x11rb_event_source", "x11rb"]

[patch."https://github.com/Smithay/smithay.git"]
smithay = { git = "https://github.com/PolyMeilex/smithay.git", branch = "seat-ddata" }
