[package]
name = "anodium"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["anodium-backend", "anodium-framework"]

[dependencies]
anodium-protocol = { path = "./anodium-protocol", features = ["server"] }
anodium-backend = { path = "./anodium-backend" }
anodium-framework = { path = "./anodium-framework" }

bitflags = "1.3"
fps_ticker = "1.0"

slog = { version = "2.1" }
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1"
slog-envlogger = "2.2"
slog-scope = "4.4"

xkbcommon = "0.4"

clap = { version = "3.1.9", features = ["derive"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
  # "use_system_lib",
  "renderer_gl",
  "backend_egl",
  "wayland_frontend",
  "slog-stdlog",
  "desktop",
]

[dependencies.x11rb]
optional = true
version = "0.10.1"
default-features = false
features = ["composite"]

[dependencies.calloop]
version = "0.10.0"
features = []

[features]
default = ["udev", "winit", "x11", "debug"]

x11 = ["anodium-backend/x11", "x11rb"]
winit = ["anodium-backend/winit"]
udev = ["anodium-backend/udev"]

debug = []
xwayland = [
  "smithay/xwayland",
  "smithay/x11rb_event_source",
  "x11rb",
  "anodium-framework/xwayland",
]

# [patch."https://github.com/Smithay/smithay.git"]
# smithay = { git = "https://github.com/PolyMeilex/smithay.git", branch = "seat-ddata" }

[patch.crates-io]
winit = { git = "https://github.com/rust-windowing/winit", rev = "4c39b3188cee29548761b57f38e4aa046cbe31ea" }
