[package]
name = "anodium-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
slog = "2.7"
slog-scope = "4.4"
bitflags = "1.3"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = ["wayland_frontend", "desktop"]

[dependencies.x11rb]
optional = true
version = "0.9"
default-features = false
features = ["composite"]

[features]
default = []
xwayland = ["x11rb", "smithay/xwayland", "smithay/x11rb_event_source"]
