[package]
name = "anodium-protocol"
version = "0.1.0"
edition = "2021"

[build-dependencies]
wayland-scanner = "0.29.1"

[dependencies]
wayland-server = { version = "0.29", optional = true }
wayland-client = { version = "0.29", optional = true }
wayland-commons = "0.29.1"

calloop = { version = "0.9.1", optional = true }
glib = { version = "0.15.2", optional = true }

[features]
default = []
server = ["wayland-server"]
client = ["wayland-client"]

calloop-adapter = ["calloop"]
glib-adapter = ["glib"]

[[example]]
name = "calloop_client"
required-features = ["calloop-adapter"]

[[example]]
name = "glib_client"
required-features = ["glib-adapter"]

[[example]]
name = "server"
required-features = ["server", "calloop-adapter"]
