[package]
name = "anodium-smallervil"
version = "0.1.0"
edition = "2021"

[dependencies]
anodium-backend = { path = "../anodium-backend" }
anodium-framework = { path = "../anodium-framework" }
slog = "2.7.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = ["wayland_frontend"]
