[package]
name = "imgui-smithay-renderer"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[dependencies]
imgui = "0.8.0"
memoffset = "0.6.4"
cgmath = "0.18.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [ "use_system_lib", "renderer_gl", "backend_egl", "wayland_frontend", "slog-stdlog"]